Some updates to README and prompt

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <p>Note that LiquidJS is set to escape HTML by default.
 
           <p>You may produce a full HTML page or just contents for its body. Your output will be
-          rendered in an iframe.
+          rendered in an iframe, so doesn't need extra padding.
           You can include <code>&lt;style&gt;</code> and
           <code>&lt;script&gt;</code> tags or import external stylesheets and scripts.
         </div>
